--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ ZENDESK_LOGO_URL=''
 # ***** Miscellaneous *****
 APP_ID=''
 MFE_CONFIG_API_URL=''
+#env private
+ENABLE_COOKIE_POLICY_BANNER='true'
+ENABLE_PROGRESSIVE_PROFILING_ON_AUTHN='true'
+MARKETING_EMAILS_OPT_IN='true'
+SHOW_CONFIGURABLE_EDX_FIELDS='true'
