--- a/.env
+++ b/.env
@@ -22,18 +22,19 @@ LOGIN_ISSUE_SUPPORT_LINK=''
 AUTHN_PROGRESSIVE_PROFILING_SUPPORT_LINK=null
 # ***** Features flags *****
 DISABLE_ENTERPRISE_LOGIN=''
-ENABLE_COOKIE_POLICY_BANNER=''
+
 ENABLE_DYNAMIC_REGISTRATION_FIELDS=''
-ENABLE_PROGRESSIVE_PROFILING_ON_AUTHN=''
+
 ENABLE_PERSONALIZED_RECOMMENDATIONS=''
-MARKETING_EMAILS_OPT_IN=''
-SHOW_CONFIGURABLE_EDX_FIELDS=''
+
+
 # ***** Zendesk related keys *****
 ZENDESK_KEY=''
 ZENDESK_LOGO_URL=''
 # ***** Miscellaneous *****
 APP_ID=''
 MFE_CONFIG_API_URL=''
+#added from .env.private
 ENABLE_COOKIE_POLICY_BANNER='true'
 ENABLE_PROGRESSIVE_PROFILING_ON_AUTHN='true'
 MARKETING_EMAILS_OPT_IN='true'
