removed .env private

--- a/.env.development
+++ b/.env.development
@@ -33,3 +33,4 @@ AUTHN_PROGRESSIVE_PROFILING_SUPPORT_LINK='http://localhost:1999/welcome'
 # ***** Miscellaneous *****
 APP_ID=''
 MFE_CONFIG_API_URL=''
+SHOW_CONFIGURABLE_EDX_FIELDS='true'
