--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ ENABLE_DYNAMIC_REGISTRATION_FIELDS=''
 
 ENABLE_PERSONALIZED_RECOMMENDATIONS=''
 MARKETING_EMAILS_OPT_IN=''
-SHOW_CONFIGURABLE_EDX_FIELDS='true'
+SHOW_CONFIGURABLE_EDX_FIELDS=''
 # ***** Zendesk related keys *****
 ZENDESK_KEY=''
 ZENDESK_LOGO_URL=''
