--- a/.env
+++ b/.env
@@ -23,11 +23,11 @@ AUTHN_PROGRESSIVE_PROFILING_SUPPORT_LINK=null
 # ***** Features flags *****
 DISABLE_ENTERPRISE_LOGIN=''
 
-ENABLE_DYNAMIC_REGISTRATION_FIELDS=''
+ENABLE_DYNAMIC_REGISTRATION_FIELDS='true'
 
 ENABLE_PERSONALIZED_RECOMMENDATIONS=''
 MARKETING_EMAILS_OPT_IN=''
-SHOW_CONFIGURABLE_EDX_FIELDS=''
+SHOW_CONFIGURABLE_EDX_FIELDS='true'
 # ***** Zendesk related keys *****
 ZENDESK_KEY=''
 ZENDESK_LOGO_URL=''
